--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -68,12 +68,12 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Gallery information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Gallery</li>
+                <li><strong>Client</strong>: Rausun</li>
+                <li><strong>Project date</strong>: 01 Jan 2022</li>
+                <li><strong>Project URL</strong>: <a href="www.rausun.com">www.rausun.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
