--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Gallery</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Hobby</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Ravi Gandhi</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Developer,Entrepreneur,Freelancer, Photographer , Gym Trainer"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/ravi.five4" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -105,7 +105,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech CSE</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>ravi.five4.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>ravi.five4@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -177,14 +177,14 @@ privileged have a level-playing-field with equal chances of excelling and again 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML & CSS  <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">SQL <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -257,7 +257,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Ravi Gandhi</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven Software Engineer with 1 years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Dist : Khagaria , Bihar INDIA</li>
                 <li>+91 9110132757</li>
@@ -286,10 +286,20 @@ privileged have a level-playing-field with equal chances of excelling and again 
               <h5>2021 - Present</h5>
               <p><em>Bangalore , INDIA</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Contributes in Marketplace-CMS through creating a User Module which provide permission to the other module along with management of module </li>
+                <li>Integration of Marketplace-CMS module </li>
+                <li> Tech Used  : Next Js  </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Personal Projects</h4>
+              <h5>2020 - 2021</h5>
+              <p><em>Creation and management </em></p>
+              <ul>
+                <li>AWS based project : created a Serverless Online Library website through AWS LAmbda and AWS amplify</li>
+                <li>Text BAsed Unigram Search Engine  : A search engine developed on C++ based on pattern search technique</li>
+
+
               </ul>
             </div>
             <div class="resume-item">
@@ -297,12 +307,14 @@ privileged have a level-playing-field with equal chances of excelling and again 
               <h5>2021- Present</h5>
               <p><em>CEO & Founder  www.rausun.com</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>A Website which provide a platform to promote talented people to get opportunity,name ,fame and much more </li>
+                <li>Tech Used  :  HTML / CSS /bootstrap / JavaScript / React Js /My SQL</li>
+                <li>Visit and review it </li>
+
+
               </ul>
             </div>
+      
           </div>
         </div>
 
@@ -433,7 +445,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Singing</a></h4>
-              <p>Worry Less Sing More</p>
+              <p>Preparation today leads to Success Tomorrow</p>
             </div>
           </div>
 
@@ -446,7 +458,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Swimming</a></h4>
-              <p>You Are Stronger than you think </p>
+              <p>You Are Stronger than you think , Be Positive</p>
             </div>
           </div>
 
