--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Ravi Gandhi - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -553,7 +553,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>ravi.five4@.com</p>
+                <p>ravi.five4@gmail.com</p>
               </div>
 
               <div class="phone">
