--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ privileged have a level-playing-field with equal chances of excelling and again 
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="www.rausun.com/">www.Rausun.com</a>
+        Designed by <a href="www.rausun.com/">www.rausun.com</a>
       </div>
     </div>
   </footer><!-- End Footer -->
